--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,23 +1,8 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ 
  */
 * {
-    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent highlighting */
 }
 
 h2{
@@ -38,18 +23,6 @@ body {
     padding:0px;
     width:100%;
 }
-
-
-paper-toolbar.title {
-	--paper-toolbar-background: blue;
-	--paper-toolbar-title:{
-		font-weight: bold;
-	};
-	
-}
-paper-button.drawer{
-	width: 98%;
-}
 h1 {
     font-size:24px;
     font-weight:normal;
@@ -57,4 +30,20 @@ h1 {
     overflow:visible;
     padding:0px;
     text-align:center;
+}
+
+paper-card.mapCard{
+	width: 95%;
+	color:white;
+	--paper-card-header-color: white;
+	margin: 10px;
+	background: #005DAA;
+}
+.card-content{
+	background:white;
+	color: black;
+}
+
+paper-button.drawer{
+	width: 98%;
 }
